# flag-of-nepal

./: .gitignore  README.md  flagOfNepal.m
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cpp/src/: main.cpp
demo/: README.md  flag.js  index.html  npflag.js
docs/: README.md  index.html
geom2d-2015.05.13/: license.txt
geom2d-2015.05.13/geom2d/geom2d/: circumCenter3d.m  isParallel.m  isPerpendicular.m
geom2d-2015.05.13/geom2d/polygons2d/: polygonExpand.m
go/: .gitignore  Makefile  README.md  go.mod  main.go
go/cmd/flag-of-nepal/: main.go
go/npflag/: npflag.go
images/: .gitignore
java/: .gitignore  FlagOfNepal.java  Makefile  README.md
java/src/main/java/flagofnepal/: FlagOfNepal.java
javascript/: Makefile  README.md  flag-of-nepal.mjs  package.json
javascript/src/: npflag.mjs
matlab/: README.md  flagOfNepal.m
python/: .gitignore  Makefile  README.md  pyproject.toml
python/src/flag_of_nepal/: __init__.py  __main__.py  geometry.py  render.py
rust/: .gitignore  Cargo.toml  Makefile  README.md
rust/src/: lib.rs  main.rs
